testsuite/poke.pkl/int-struct-type-diag-18.pk
/* { dg-do compile } */

type Foo = struct uint<*> { uint<1> a; int<64> b; }; /* { dg-error "invalid total size.*\n.*got 65 bits" } */
